--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("/img/backgroundLp.png");
+  background-image: url("../../img/backgroundLp.png");
   background-size: 105%;
   background-repeat: no-repeat;
   background-position: right;
