--- a/scss/others/page.scss
+++ b/scss/others/page.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("/img/backgroundLp.png");
+  background-image: url("../../img/backgroundLp.png");
   background-size: 105%;
   background-repeat: no-repeat;
   background-position: right;
